Update JmxGenerator.java